--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src -d build",
-    "start":"npm run build && node build/index.js",
+    "start": "npm run build && node build/index.js",
     "migrations": "npm run build && node build/migrations.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,7 +18,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
-    "mongoose": "^5.10.7"
+    "mongoose": "^5.10.7",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
